--- a/src/main/resources/templates/manager/fee-add.html
+++ b/src/main/resources/templates/manager/fee-add.html
@@ -16,70 +16,73 @@
     <link rel="stylesheet" type="text/css" th:href="@{/assets/static/h-ui.admin/skin/default/skin.css}" id="skin"/>
     <link rel="stylesheet" type="text/css" th:href="@{/assets/static/h-ui.admin/css/style.css}"/>
     <!--/meta 作为公共模版分离出去-->
-
-    <title>添加员工</title>
+    <title>添加收费</title>
 </head>
 <body>
 <article class="cl pd-20">
-    <!--action="/emp/add" method="post"-->
-    <form class="form form-horizontal " id="form-admin-add">
-        <input type="hidden" name="id" id="id" value=""/>
+    <form class="form form-horizontal" id="form-admin-add">
         <div class="row cl">
-            <label class="form-label col-xs-4 col-sm-3"><span class="c-red">*</span>账号：</label>
+            <label class="form-label col-xs-4 col-sm-3"><span class="c-red">*</span>收费类型：</label>
             <div class="formControls col-xs-8 col-sm-9">
-                <input type="text" class="input-text" value="" placeholder="" id="account" name="account">
+                  <span class="select-box" style="width:160px">
+                        <select class="select" name="feeTypeId" size="1">
+                            <option value="" selected>请选择收费类型</option>
+                            <option th:each="feeType:${feeTypeList}" th:value="${feeType.id}" th:text="${feeType.name}"></option>
+                        </select>
+                  </span>
             </div>
         </div>
         <div class="row cl">
-            <label class="form-label col-xs-4 col-sm-3"><span class="c-red">*</span>初始密码：</label>
+            <label class="form-label col-xs-4 col-sm-3"><span class="c-red">*</span>金额：</label>
             <div class="formControls col-xs-8 col-sm-9">
-                <input type="password" class="input-text" autocomplete="off" placeholder="密码" id="password"
-                       name="password">
+                <input type="text" class="input-text" value="" placeholder="金额" id="money" name="money">
             </div>
         </div>
         <div class="row cl">
-            <label class="form-label col-xs-4 col-sm-3"><span class="c-red">*</span>确认密码：</label>
-            <div class="formControls col-xs-8 col-sm-9">
-                <input type="password" class="input-text" autocomplete="off" placeholder="确认新密码" id="password2"
-                       name="password2">
-            </div>
-        </div>
-        <div class="row cl">
-            <label class="form-label col-xs-4 col-sm-3"><span class="c-red">*</span>姓名：</label>
-            <div class="formControls col-xs-8 col-sm-9">
-                <input type="text" class="input-text" placeholder="" id="name" name="name">
-            </div>
-        </div>
-        <div class="row cl">
-            <label class="form-label col-xs-4 col-sm-3"><span class="c-red">*</span>性别：</label>
+            <label class="form-label col-xs-4 col-sm-3"><span class="c-red">*</span>支付方式：</label>
             <div class="formControls col-xs-8 col-sm-9 skin-minimal">
                 <div class="radio-box">
-                    <input name="sex" type="radio" id="sex-1" value="女" checked>
-                    <label for="sex-1">男</label>
+                    <input name="method" type="radio" id="method1" value="支付宝">
+                    <label for="sex-1">支付宝</label>
                 </div>
                 <div class="radio-box">
-                    <input type="radio" id="sex-2" name="sex" value="女">
-                    <label for="sex-2">女</label>
+                    <input type="radio" id="method2" name="method" value="微信">
+                    <label for="sex-2">微信</label>
+                </div>
+                <div class="radio-box">
+                    <input type="radio" id="method3" name="method" value="银行卡">
+                    <label for="sex-2">银行卡</label>
+                </div>
+                <div class="radio-box">
+                    <input type="radio" id="method4" name="method" value="现金">
+                    <label for="sex-2">现金</label>
                 </div>
             </div>
         </div>
         <div class="row cl">
-            <label class="form-label col-xs-4 col-sm-3"><span class="c-red">*</span>手机：</label>
-            <div class="formControls col-xs-8 col-sm-9">
-                <input type="text" class="input-text" value="" placeholder="" id="phone" name="phone">
+            <label class="form-label col-xs-4 col-sm-3"><span class="c-red">*</span>状态：</label>
+            <div class="formControls col-xs-8 col-sm-9 skin-minimal">
+                <div class="radio-box">
+                    <input name="status" type="radio" id="sex-1" value="1">
+                    <label for="sex-1">未缴费</label>
+                </div>
+                <div class="radio-box">
+                    <input type="radio" id="sex-2" name="status" value="2">
+                    <label for="sex-2">已缴费</label>
+                </div>
             </div>
         </div>
         <div class="row cl">
-            <label class="form-label col-xs-4 col-sm-3"><span class="c-red">*</span>角色：</label>
-            <div class="formControls col-xs-8 col-sm-9"> <span class="select-box" style="width:150px;">
-				<select class="select" name="roleId" size="1">
-					<option value="-1" selected>请选择角色</option>
-					<option value="0">管理员</option>
-					<option value="1">安保员</option>
-					<option value="2">清洁员</option>
-					<option value="3">维修员</option>
-				</select>
-				</span></div>
+            <label class="form-label col-xs-4 col-sm-3"><span class="c-red">*</span>业主编号：</label>
+            <div class="formControls col-xs-8 col-sm-9">
+                <input type="text" class="input-text" value="" placeholder="业主编号" id="ownerId" name="ownerId">
+            </div>
+        </div>
+        <div class="row cl">
+            <label class="form-label col-xs-4 col-sm-3">操作员编号：</label>
+            <div class="formControls col-xs-8 col-sm-9">
+                <input type="text" class="input-text" value="" placeholder="操作员编号" id="operatorId" name="operatorId">
+            </div>
         </div>
         <div class="row cl">
             <div class="col-xs-8 col-sm-9 col-xs-offset-4 col-sm-offset-3">
@@ -105,9 +108,9 @@
 <script type="text/javascript">
     function insert() {
         //得到表单数据，序列化表单
-        var employee = $("#form-admin-add").serialize();
-        //使用ajax post提交方式 ，默认json数据
-        $.post("http://localhost:8380/admin/emp/add", employee, function (data) {
+        var owner = $("#form-admin-add").serialize();
+        //使用ajax post提交方式 ，默认json数据/*[[@{/index/ajaxtest}]]*/
+        $.post("http://localhost:8380/admin/fee/add", owner, function (data) {
             //回调回来的数据data
             if (data.code == '200') {
                 alert('响应码：' + data.code + " ,消息：" + data.message);
