--- a/src/main/resources/templates/manager/public/_menu.html
+++ b/src/main/resources/templates/manager/public/_menu.html
@@ -8,7 +8,7 @@
             <dt><i class="Hui-iconfont">&#xe616;</i> 维修管理<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
             <dd>
                 <ul>
-                    <li><a href="article-list.html" title="资讯管理">维修列表</a></li>
+                    <li><a href="/admin/repair/list" title="维修列表">维修列表</a></li>
                 </ul>
             </dd>
         </dl>
@@ -16,7 +16,7 @@
             <dt><i class="Hui-iconfont">&#xe613;</i> 收费管理<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
             <dd>
                 <ul>
-                    <li><a href="picture-list.html" title="图片管理">收费列表</a></li>
+                    <li><a href="/admin/fee/list" title="收费列表">收费列表</a></li>
                 </ul>
             </dd>
         </dl>
