--- a/src/main/resources/templates/manager/facility-list.html
+++ b/src/main/resources/templates/manager/facility-list.html
@@ -107,16 +107,16 @@
 </section>
 
 <!--_footer 作为公共模版分离出去-->
-<script type="text/javascript" th:src="@{/assets/lib/jquery/1.9.1/jquery.min.js}"></script>
-<script type="text/javascript" th:src="@{/assets/lib/layer/2.4/layer.js}"></script>
-<script type="text/javascript" th:src="@{/assets/static/h-ui/js/H-ui.js}"></script>
-<script type="text/javascript" th:src="@{/assets/static/h-ui.admin/js/H-ui.admin.page.js}"></script>
+<script type="text/javascript" th:src="@{/static/assets/lib/jquery/1.9.1/jquery.min.js}"></script>
+<script type="text/javascript" th:src="@{/static/assets/lib/layer/2.4/layer.js}"></script>
+<script type="text/javascript" th:src="@{/static/assets/static/h-ui/js/H-ui.js}"></script>
+<script type="text/javascript" th:src="@{/static/assets/static/h-ui.admin/js/H-ui.admin.page.js}"></script>
 <!--/_footer /作为公共模版分离出去-->
 
 <!--请在下方写此页面业务相关的脚本-->
-<script type="text/javascript" th:src="@{/assets/lib/My97DatePicker/4.8/WdatePicker.js}"></script>
-<script type="text/javascript" th:src="@{/assets/lib/datatables/1.10.15/jquery.dataTables.min.js}"></script>
-<script type="text/javascript" th:src="@{/assets/lib/laypage/1.2/laypage.js}"></script>
+<script type="text/javascript" th:src="@{/static/assets/lib/My97DatePicker/4.8/WdatePicker.js}"></script>
+<script type="text/javascript" th:src="@{/static/assets/lib/datatables/1.10.15/jquery.dataTables.min.js}"></script>
+<script type="text/javascript" th:src="@{/static/assets/lib/laypage/1.2/laypage.js}"></script>
 <script type="text/javascript">
     /*
         参数解释：
