--- a/src/main/resources/templates/manager/house-add.html
+++ b/src/main/resources/templates/manager/house-add.html
@@ -79,17 +79,17 @@
 </article>
 
 <!--_footer 作为公共模版分离出去-->
-<script type="text/javascript" th:src="@{/assets/lib/jquery/1.9.1/jquery.min.js}"></script>
-<script type="text/javascript" th:src="@{/assets/lib/layer/2.4/layer.js}"></script>
-<script type="text/javascript" th:src="@{/assets/static/h-ui/js/H-ui.js}"></script>
-<script type="text/javascript" th:src="@{/assets/static/h-ui.admin/js/H-ui.admin.page.js}"></script>
+<script type="text/javascript" th:src="@{/static/assets/lib/jquery/1.9.1/jquery.min.js}"></script>
+<script type="text/javascript" th:src="@{/static/assets/lib/layer/2.4/layer.js}"></script>
+<script type="text/javascript" th:src="@{/static/assets/static/h-ui/js/H-ui.js}"></script>
+<script type="text/javascript" th:src="@{/static/assets/static/h-ui.admin/js/H-ui.admin.page.js}"></script>
 
 <!--/_footer /作为公共模版分离出去-->
 
 <!--请在下方写此页面业务相关的脚本-->
-<script type="text/javascript" th:src="@{/assets/lib/jquery.validation/1.14.0/jquery.validate.js}"></script>
-<script type="text/javascript" th:src="@{/assets/lib/jquery.validation/1.14.0/validate-methods.js}"></script>
-<script type="text/javascript" th:src="@{/assets/lib/jquery.validation/1.14.0/messages_zh.js}"></script>
+<script type="text/javascript" th:src="@{/static/assets/lib/jquery.validation/1.14.0/jquery.validate.js}"></script>
+<script type="text/javascript" th:src="@{/static/assets/lib/jquery.validation/1.14.0/validate-methods.js}"></script>
+<script type="text/javascript" th:src="@{/static/assets/lib/jquery.validation/1.14.0/messages_zh.js}"></script>
 <script type="text/javascript">
 	function insert() {
 		//得到表单数据，序列化表单
