--- a/src/main/resources/templates/manager/repair-add.html
+++ b/src/main/resources/templates/manager/repair-add.html
@@ -17,23 +17,64 @@
     <link rel="stylesheet" type="text/css" th:href="@{/assets/static/h-ui.admin/css/style.css}"/>
     <!--/meta 作为公共模版分离出去-->
 
-    <title>添加收费类型</title>
+    <title>添加车位</title>
 </head>
 <body>
 <article class="cl pd-20">
-    <form class="form form-horizontal " id="form-admin-add">
-        <input type="hidden" name="id" id="id" value=""/>
+    <form class="form form-horizontal" id="form-admin-add">
         <div class="row cl">
-            <label class="form-label col-xs-4 col-sm-3"><span class="c-red">*</span>名称：</label>
+            <label class="form-label col-xs-4 col-sm-3"><span class="c-red">*</span>维修物品：</label>
             <div class="formControls col-xs-8 col-sm-9">
-                <input type="text" class="input-text" placeholder="" id="name" name="name">
+                <input type="text" class="input-text" value="" placeholder="物品" id="item" name="item">
             </div>
         </div>
         <div class="row cl">
-            <label class="form-label col-xs-4 col-sm-3">备注：</label>
+            <label class="form-label col-xs-4 col-sm-3"><span class="c-red">*</span>地点：</label>
             <div class="formControls col-xs-8 col-sm-9">
-                <textarea name="remark" cols="" rows="" class="textarea"  placeholder="200个字符以内" dragonfly="true" onKeyUp="textarealength(this,200)"></textarea>
+                <input type="text" class="input-text" value="" placeholder="地点" id="site" name="site">
+            </div>
+        </div>
+        <div class="row cl">
+            <label class="form-label col-xs-4 col-sm-3"><span class="c-red">*</span>原因：</label>
+            <div class="formControls col-xs-8 col-sm-9">
+                <textarea name="reason" cols="" rows="" class="textarea" placeholder="200个字符以内" dragonfly="true"
+                          onKeyUp="textarealength(this,200)"></textarea>
                 <p class="textarea-numberbar"><em class="textarea-length">0</em>/100</p>
+            </div>
+        </div>
+        <div class="row cl">
+            <label class="form-label col-xs-4 col-sm-3"><span class="c-red">*</span>报修时间：</label>
+            <div class="formControls col-xs-8 col-sm-9">
+                <input type="text" class="input-text" value="" placeholder="" id="create" name="create">
+            </div>
+        </div>
+        <div class="row cl">
+            <label class="form-label col-xs-4 col-sm-3"><span class="c-red">*</span>状态：</label>
+            <div class="formControls col-xs-8 col-sm-9 skin-minimal">
+                <div class="radio-box">
+                    <input name="status" type="radio" id="sex-1" value="1">
+                    <label for="sex-1">未受理</label>
+                </div>
+                <div class="radio-box">
+                    <input type="radio" id="sex-2" name="status" value="2">
+                    <label for="sex-2">已受理(未解决)</label>
+                </div>
+                <div class="radio-box">
+                    <input type="radio" id="sex-3" name="status" value="3">
+                    <label for="sex-2">已解决</label>
+                </div>
+            </div>
+        </div>
+        <div class="row cl">
+            <label class="form-label col-xs-4 col-sm-3">报修人：</label>
+            <div class="formControls col-xs-8 col-sm-9">
+                <input type="text" class="input-text" value="" placeholder="" id="ownerId" name="ownerId">
+            </div>
+        </div>
+        <div class="row cl">
+            <label class="form-label col-xs-4 col-sm-3">处理人：</label>
+            <div class="formControls col-xs-8 col-sm-9">
+                <input type="text" class="input-text" value="" placeholder="" id="employeeName" name="employeeName">
             </div>
         </div>
         <div class="row cl">
@@ -60,9 +101,9 @@
 <script type="text/javascript">
     function insert() {
         //得到表单数据，序列化表单
-        var employee = $("#form-admin-add").serialize();
-        //使用ajax post提交方式 ，默认json数据
-        $.post("http://localhost:8380/admin/feeType/add", employee, function (data) {
+        var owner = $("#form-admin-add").serialize();
+        //使用ajax post提交方式 ，默认json数据/*[[@{/index/ajaxtest}]]*/
+        $.post("http://localhost:8380/admin/repair/add", owner, function (data) {
             //回调回来的数据data
             if (data.code == '200') {
                 alert('响应码：' + data.code + " ,消息：" + data.message);
